[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lineoa"
version = "4.4.3"
description = "LINE Official User API wrapper library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "madoa5561" }
]
keywords = ["LINE", "API", "bot", "messaging"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.32.5",
  "selenium>=4.40.0",
  "sseclient-py>=1.9.0"
]

[project.urls]
Homepage = "https://github.com/madoa5561/LINELib"
Repository = "https://github.com/madoa5561/LINELib"
Issues = "https://github.com/madoa5561/LINELib/issues"
